compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/typeAliasActualization2.descriptors.java
@common.pack.RegularAnnotation()
@jvm.pack.ActualAnnotation()
public final class ClassToCheck /* common.pack.ClassToCheck*/ {
  public  ClassToCheck();//  .ctor()

  public final void t(@org.jetbrains.annotations.NotNull() jvm.pack.ActualClass);//  t(jvm.pack.ActualClass)
}